updated css links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Curtain.js - Example</title>
     <meta name="author" content="Victor Coulon">
     <meta name="description" content="jQuery plugin for creating an unique page transitioning system">
-    <link rel="stylesheet" href="../curtain.css">
+    <link rel="stylesheet" href="curtain/curtain.css">
     <link rel="stylesheet" href="base.css">
 </head>
 <body>
@@ -87,7 +87,7 @@
 </ol>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="../curtain.js"></script>
+<script src="curtain/curtain.js"></script>
 <script>
     $(function(){
        $('.curtains').curtain({
