new opening text

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Curtain.js - Example</title>
-    <meta name="author" content="Victor Coulon">
-    <meta name="description" content="jQuery plugin for creating an unique page transitioning system">
+    <title>Who is Jesus? | BfA Magazine Summer 2013 Issue</title>
+    <meta name="author" content="Jonathan Tien">
+    <meta name="description" content="INTERNAL USE ONLY proof-of-concept digital magazine/long-form content for Bibles for America">
     <link rel="stylesheet" href="curtain/curtain.css">
     <link rel="stylesheet" href="base.css">
 </head>
@@ -15,29 +15,38 @@
     <!--<li id="section-1" class="cover" data-parallax-background="-.05">-->
     <li id="section-1" class="cover">
         <header data-fade="550" data-slow-scroll="3">
-            <h1>curtain.js</h1>
-            <h2>an easy to use scrolling plugin</h2>
+            <h1>Who is Jesus?</h1>
+            <h2>The Bibles for America Magazine</h2>
+            <h3>Summer 2013 Issue</h3>
         </header>
     </li>
     <li id="section-2">
         <article>
-            <h4>What's Curtain.js?</h4>
+
+            <h4>Who is Jesus?</h4>
             <hr>
-            <p>This plugin allows you to create a web page with multiple fixed panels that unroll
-            with an amusing effect. Exactly like a curtain rises.</p>
-            <p>To navigate, you can use your keyboard instead the scrollbar or your mousewheel to navigate
-            into the document. But that's not all, there is more features!<br>
-            You can scroll into this document to view some of them.</p>
-            <h4>How it's works?</h4>
+            <p> For centuries, people have wondered who Jesus Christ is. 
+                Whether you consider Him a myth, a historical figure, a prophet sent from God, or even the very God Himself,
+                there is no denying Jesus' influence on human history. It would not be a strech to call Him the most influential figure of the Common Era. </p>
+            <br>
+            <p> There is no dearth of literature, both contemporary and antiquated, on the person of Jesus Christ.
+                Various people, scholars and laymen alike, have commented widely on this man, forming a broad spectrum of opinion regarding the life, work, and person of Jesus Christ. 
+                However, there is no better source or authority on Jesus than the Bible itself. </p>
+            <br>
+            <p> In this issue, we will explore what the Bible says about Jesus. 
+                In order to truly know who Jesus is, it is necessary to return to the book that </p>
+
+            <h4>The BfA Magazine</h4>
             <hr>
-            <p>You can find all instructions about the plugin on the <a href="#">github page</a>.</p>
-            <p></p>
-            <p>Feel free to fork the project on <a href="#">github</a> or ping me on
-            <a href="#">twitter</a> for any comments.</p>
-            <p></p>
+            <p> The Bibles for America Magazine is a semi-annual production of <a href="http://bfa.org">Bibles for America</a>.
+                Each issue explores a particular topic or theme, tracing its development and exposition in the Bible. 
+                Bibles for America is a non-profit organization based out of Irvine, California. </p>
+            <br>
+            <p> You can find us on <a href="#">Facebook</a> or <a href="#">Twitter</a>.</p>
+
             <p class="align-center">
-               <a href="#" class="button">download</a>
-               <a href="#" class="button">instructions</a> 
+               <a href="http://bfa.org/" class="button">bfa.org</a>
+               <a href="#" class="button">past issues</a> 
             </p>
         </article>
     </li>
