added logo, article

--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
 <ol class="curtains">
     <!--<li id="section-1" class="cover" data-parallax-background="-.05">-->
     <li id="section-1" class="cover">
+
+        <img src="img/logo.png" class="logo"></img>
+
+        <navigation id="nav">
+            <a href="#">Cover</a> &nbsp; | &nbsp;
+            <a href="#">Incarnation</a> &nbsp; | &nbsp;
+            <a href="#">Human Living</a> &nbsp; | &nbsp;
+            <a href="#">Crucifixion</a> &nbsp; | &nbsp;
+            <a href="#">Resurrection</a> &nbsp; | &nbsp;
+            <a href="#">Ascension</a> &nbsp; | &nbsp;
+            <a href="#">Conclusion</a> &nbsp;
+        </navigation>
+
         <header data-fade="550" data-slow-scroll="3">
             <h1>Who is Jesus?</h1>
-            <h2>The Bibles for America Magazine</h2>
             <h3>Summer 2013 Issue</h3>
         </header>
     </li>
@@ -51,46 +63,62 @@
         </article>
     </li>
     <li id="section-3">
-        <section class="photos">
+        <section class="content">
             <div class="fixed">
-                <h4>Here's a fixed title</h4>
-                <p>With a small fixed text.</p>
-                <p>Oh, and you can see my last selected Instagram pictures on the left.</p>
+                <h4>Who Is Jesus?</h4>
+                <p>by David Chen</p>
             </div>
-            <div class="photos-inner">
-                <ul class="step-list">
-                    <li class="step">
-                        <img src="img/stepbystep/1.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/2.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/3.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/4.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/5.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/6.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/7.jpg" alt="">
-                    </li>
-                    <li class="step">
-                        <img src="img/stepbystep/8.jpg" alt="">
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </li>
-    <li id="section-4">
-        <section class="download">
-            <h1>Interested?</h1>
-            <a href="#">download on github</a>
+            <article>
+            <p> 
+                Was Jesus a prophet? Or was He God or both? Who was His father? What did He look like? What did He really do? Was He a good man who died for religious causes? Where is He now? At some point we’ve had some if not all of these questions. </p> 
+            
+            <h4>God dwelt in unapproachable light</h4>
+            <p>
+                Before the world began, God dwelt in unapproachable light. But to fulfill His purpose, God did not stay unapproachable.
+                He became a man named Jesus who was very approachable. Jesus’ coming is prophesied 750 years before His birth in the book of Isaiah:
+            <p>     
+                Isaiah 7:14 says “Behold, the virgin will conceive and will bear a son, and she will call his name Immanuel.”
+                Isaiah 9:6 says “a child is born to us...and His name will be called Wonderful Counselor, Mighty God, Eternal Father...”
+            <p>    
+                In these two verses we see that Jesus’ birth was no ordinary birth - the virgin Mary was miraculously found to be with a child whose name would be “Mighty God.” Whoa. Jesus went through the extraordinary hassle of being in a womb for nine months. Not only is Jesus God, He is a also a human being. In this human being, the unapproachable, infinite God fully joined Himself to man. God became limited in time and space, and suffered as a human being.
+            <p>     
+            <h4>Jesus grew up</h4>
+            <p>
+                Jesus grew up in a city called Nazareth. On one occasion in the Bible, someone rhetorically asked “Can anything good come out of Nazareth?” Nazareth was a despised place. Jesus was God joined to man, but He grew up in a despicable place. That was against many people’s ideas about God.
+
+                As Jesus grew up, He did many ordinary things. He went to the synagogue, submitted to His parents, studied the Bible, and worked as a carpenter. He had to be trained to have vocational skills. From age zero to thirty, He was just like us.Yet He was without sin.
+            <p>
+            <h4>He showed us who God is</h4>
+            <p>
+                When He was thirty years old, He began His ministry to work for God. In other words, Jesus waited thirty years before doing something for God. In His work to cast out demons, raise the dead, heal the sick, and eventually die on the cross, He was showing us who God was. People saw God through the life of Jesus. For example, He ate with people of the lowest pedigree -  prostitutes, extortionists, and the homeless - people that nobody liked. Others criticized Jesus for being with them, but He loved all men and came to save all men. He said things that surprised people. He wasn’t very good-looking. He wasn’t the most popular person. This was how Jesus talked, lived, and worked.
+            <p>
+            <h4>He died on the cross</h4>
+            <p>
+                In order to save us, Jesus, who had lived a sinless life of expressing God, had to die. At age thirty-three and a half Jesus Christ was sentenced to the most painful death, death by Roman crucifixion. The Bible calls Him two things: the Lamb of God and a grain of wheat. As the Lamb of God He was sinless, but was meekly led to the cross to take away all of our sins - past, present, and future, little sins and big sins. As the grain of wheat He was full of life, but died so we can also receive His life and be the many grains. Thus, in death He took care of our sins, and He released life so we can receive life.
+            <p>
+                God really really loves us. It’s good to have a positive view of what the Lord Jesus accomplished when He died on the cross. Though He suffered, He erased sin and released His life so that we can be saved and come to God. What a victory.
+            <p>    
+            <h4>He was buried and resurrected</h4>
+            <p>
+                After He died, the Lord Jesus was buried in a tomb for three days. But the Lord Jesus was doing something even in death. He marched into Hades, the place people go after they die, and took the keys of death and Hades. He was not suffering. Then, a miraculous thing happened. God resurrected Him from the dead. In resurrection, He marched out of Hades victoriously.
+            <p>
+                Famous words: “He is not here. He has been raised!” Death could not hold the resurrection life, and on the third day Jesus Christ arose in resurrection. Oh Death, where is your sting? Additionally, in resurrection He became a Spirit that gives life so that we can receive Him when we believe into Him. If we feel like we’re just “in the tomb”, sad and depressed. We can pray “Lord Jesus, You did not stay dead, but You resurrected. Lord, You are my resurrection power.”
+            <p>
+            <h4>He ascended and He will return!</h4>
+            <p>
+                Shortly after His resurrection, He ascended to God’s right hand in the heavens. In ascension, God also gave Him the greatest, highest name in the universe. His name is blasphemed and cursed all over the world today, but one day every tongue will confess Jesus is Lord and every knee will bow to His name.
+            <p>
+                So is this where the story ends? Is He still doing something today? Perhaps we think of Jesus sitting comfortably in heaven waiting for to go to heaven. But even at this very moment, He is very active. He is on the throne administrating world events to fulfill God’s purpose. He is also praying for all mankind, hoping men all over the world would turn to God. Finally, He is preparing for His second coming.
+            <p>
+                He will return. Our Lord Jesus Christ will come back one day and on that day He will bring in His kingdom. Since we do not know the time or the hour of His coming back, we can watch and hope for His appearing. We do this by loving our dear Lord Jesus.
+            <p>
+            <h4>Prayer</h4>
+            <p>
+                After this brief history of who the Lord Jesus is, we can pray:
+            <blockquote>
+                “Lord Jesus, thank You for who You are. After learning so much about You, I just want to tell You I love You. Please keep praying for me every day to turn to You. I want to know You more because I love You.” </blockquote>
+            </p>
+            </article>
         </section>
     </li>
 </ol>
