bring everything up to date

--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                 “Lord Jesus, thank You for who You are. After learning so much about You, I just want to tell You I love You. Please keep praying for me every day to turn to You. I want to know You more because I love You.” </blockquote>
             </p>
             </article>
+
+            <a href='page2.html' class="paginate">Is Jesus God?</a>
+
         </section>
     </li>
 </ol>
